Updated project files

--- a/PInvoke/Dcomp/Vanara.PInvoke.Dcomp.csproj
+++ b/PInvoke/Dcomp/Vanara.PInvoke.Dcomp.csproj
@@ -9,7 +9,19 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;dcomp;directcomposition</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+CreatePresentationFactory DCompositionAttachMouseDragToHwnd DCompositionAttachMouseWheelToHwnd DCompositionBoostCompositorClock DCompositionCreateDevice DCompositionCreateDevice2 DCompositionCreateDevice3 DCompositionCreateSurfaceHandle DCompositionGetFrameId DCompositionGetStatistics DCompositionGetTargetStatistics DCompositionWaitForCompositorClock DllGetActivationFactory DwmEnableMMCSS DwmFlush DwmpEnableDDASupport
+
+Structures
+COMPOSITION_FRAME_STATS COMPOSITION_STATS COMPOSITION_TARGET_ID COMPOSITION_TARGET_STATS DCompositionInkTrailPoint DCOMPOSITION_FRAME_STATISTICS
+
+Interfaces
+IDCompositionAffineTransform2DEffect IDCompositionAnimation IDCompositionArithmeticCompositeEffect IDCompositionBlendEffect IDCompositionBrightnessEffect IDCompositionClip IDCompositionColorMatrixEffect IDCompositionCompositeEffect IDCompositionDelegatedInkTrail IDCompositionDesktopDevice IDCompositionDevice IDCompositionDevice2 IDCompositionDevice3 IDCompositionDevice4 IDCompositionDeviceDebug IDCompositionEffect IDCompositionEffectGroup IDCompositionFilterEffect IDCompositionGaussianBlurEffect IDCompositionHueRotationEffect IDCompositionInkTrailDevice IDCompositionLinearTransferEffect IDCompositionMatrixTransform IDCompositionMatrixTransform3D IDCompositionRectangleClip IDCompositionRotateTransform IDCompositionRotateTransform3D IDCompositionSaturationEffect IDCompositionScaleTransform IDCompositionScaleTransform3D IDCompositionShadowEffect IDCompositionSkewTransform IDCompositionSurface IDCompositionSurfaceFactory IDCompositionTableTransferEffect IDCompositionTarget IDCompositionTexture IDCompositionTransform IDCompositionTransform3D IDCompositionTranslateTransform IDCompositionTranslateTransform3D IDCompositionTurbulenceEffect IDCompositionVirtualSurface IDCompositionVisual IDCompositionVisual2 IDCompositionVisual3 IDCompositionVisualDebug
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Direct2D\Vanara.PInvoke.Direct2D.csproj" />
