--- a/CodeGen/Generator/Vanara.CodeGen.csproj
+++ b/CodeGen/Generator/Vanara.CodeGen.csproj
@@ -3,21 +3,19 @@
   <PropertyGroup>
     <TargetFrameworks />
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>false</IsPackable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <PackageId>Vanara.CodeGen.Generators</PackageId>
     <RootNamespace>Vanara.Generators</RootNamespace>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <IsRoslynComponent>true</IsRoslynComponent>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <!--<IncludeBuildOutput>false</IncludeBuildOutput>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <PackFolder>analyzers\cs</PackFolder>
+    <PackFolder>generators\cs</PackFolder>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="C:\Users\dahal\Documents\GitHubRepos\Vanara\AsmDef.cs" />
     <Compile Remove="HandleTemplate.cs" />
     <Compile Remove="SafeHandleTemplate.cs" />
   </ItemGroup>
@@ -29,14 +27,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" PrivateAssets="all" GeneratePathProperty="true" />
-    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-    <None Include="$(PkgLumenWorksCsvReader)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <!--<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="generators/dotnet/cs" Visible="false" />
+    <None Include="$(PkgLumenWorksCsvReader)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="generators/dotnet/cs" Visible="false" />-->
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Vanara.Core.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\..\Core\Vanara.Core.csproj" OutputItemType="Analyzer" />
   </ItemGroup>
 
   <PropertyGroup>
