--- a/CodeGen/Generator/Vanara.CodeGen.csproj
+++ b/CodeGen/Generator/Vanara.CodeGen.csproj
@@ -1,4 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    
+  <ProjectExtensions>
+    <IncludeAssembly/>
+  </ProjectExtensions>
 
   <PropertyGroup>
     <TargetFrameworks />
