Updated solution files

--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -18,7 +18,7 @@
     <language>en-US</language>
     <dependencies>
       <dependency id="Vanara.BITS" version="4.1.2" />
-      <dependency id="" version="4.1.2" />
+      <dependency id="Vanara.CodeGen" version="4.1.2" />
       <dependency id="Vanara.Core" version="4.1.2" />
       <dependency id="Vanara.DirectoryServices" version="4.1.2" />
       <dependency id="Vanara.Management" version="4.1.2" />
