--- a/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj
+++ b/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj
@@ -200,6 +200,6 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Target Name="WipeObj" BeforeTargets="Clean;CoreClean">
     <!-- obj -->
-    <RemoveDir Directories="$(ProjectDir)$(BaseIntermediateOutputPath)" />
+    <!--<RemoveDir Directories="$(ProjectDir)$(BaseIntermediateOutputPath)" />-->
   </Target>
 </Project>
