Added Vanara.PInvoke.TelephonyApi (TAPI) assembly with all 3.x interfaces

--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -111,6 +111,7 @@
       <dependency id="Vanara.PInvoke.SpeechApi" version="4.1.6" />
       <dependency id="Vanara.PInvoke.SpellCheckingApi" version="4.1.6" />
       <dependency id="Vanara.PInvoke.TaskSchd" version="4.1.6" />
+      <dependency id="Vanara.PInvoke.TelephonyApi" version="4.1.6" />
       <dependency id="Vanara.PInvoke.TextServicesFramework" version="4.1.6" />
       <dependency id="Vanara.PInvoke.UIAnimation" version="4.1.6" />
       <dependency id="Vanara.PInvoke.UIAutomation" version="4.1.6" />
