Updated project files

--- a/PInvoke/Dcomp/Vanara.PInvoke.Dcomp.csproj
+++ b/PInvoke/Dcomp/Vanara.PInvoke.Dcomp.csproj
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CreatePresentationFactory DCompositionAttachMouseDragToHwnd DCompositionAttachMouseWheelToHwnd DCompositionBoostCompositorClock DCompositionCreateDevice DCompositionCreateDevice2 DCompositionCreateDevice3 DCompositionCreateSurfaceHandle DCompositionGetFrameId DCompositionGetStatistics DCompositionGetTargetStatistics DCompositionWaitForCompositorClock DllGetActivationFactory DwmEnableMMCSS DwmFlush DwmpEnableDDASupport
+CreatePresentationFactory DCompositionAttachMouseDragToHwnd DCompositionAttachMouseWheelToHwnd DCompositionBoostCompositorClock DCompositionCreateDevice DCompositionCreateDevice2 DCompositionCreateDevice3 DCompositionCreateSurfaceHandle DCompositionGetFrameId DCompositionGetStatistics DCompositionGetTargetStatistics DCompositionWaitForCompositorClock
 
 Structures
 COMPOSITION_FRAME_STATS COMPOSITION_STATS COMPOSITION_TARGET_ID COMPOSITION_TARGET_STATS DCompositionInkTrailPoint DCOMPOSITION_FRAME_STATISTICS
