--- a/UnitTests/Directory.Build.props
+++ b/UnitTests/Directory.Build.props
@@ -11,4 +11,10 @@
   <ItemGroup>
     <Compile Include="$(MSBuildThisFileDirectory)..\AsmDef.cs" Link="AsmDef.cs" Condition="'$(MSBuildProjectExtension)' == '.csproj'"/>
   </ItemGroup>
+  <ItemGroup Condition="'$(MSBuildProjectName)'!='Vanara.Core' And !$(MSBuildProjectName.StartsWith('Vanara.CodeGen'))">
+    <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\Generator\Vanara.CodeGen.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\Analyzer\Vanara.CodeGen.Analyzer.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)..\CodeGen\CodeFixes\Vanara.CodeGen.CodeFixes.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)..\Core\Vanara.Core.csproj" OutputItemType="Analyzer" />
+  </ItemGroup>
 </Project>
