--- a/UnitTests/CodeGen/CodeGen.csproj
+++ b/UnitTests/CodeGen/CodeGen.csproj
@@ -10,9 +10,9 @@
     <ProjectReference Include="..\..\CodeGen\Generator\Vanara.CodeGen.csproj" OutputItemType="Analyzer" /> <!--ReferenceOutputAssembly="false"-->
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.13.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.14.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing" Version="1.1.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing" Version="1.1.2" />
@@ -24,5 +24,8 @@
     <None Update="handlesbad2.csv" CopyToOutputDirectory="PreserveNewest" />
     <None Update="handlesbad3.csv" CopyToOutputDirectory="PreserveNewest" />
     <None Update="handlesbad4.csv" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.14.1" />
   </ItemGroup>
 </Project>
