--- a/PInvoke/DirectXMath/Vanara.PInvoke.DirectXMath.csproj
+++ b/PInvoke/DirectXMath/Vanara.PInvoke.DirectXMath.csproj
@@ -24,6 +24,8 @@ Structures
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" Condition=" '$(TargetFramework)' == 'net5.0' " />
   </ItemGroup>
 </Project>
