--- a/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
+++ b/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
@@ -11,7 +11,8 @@
     <Otherwise>
       <ItemGroup>
         <PackageReference Include="System.DirectoryServices" Version="6.0.1" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
-        <PackageReference Include="System.DirectoryServices" Version="8.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
+        <PackageReference Include="System.DirectoryServices" Version="8.0.0" Condition=" '$(TargetFramework)' == 'net6.0' Or '$(TargetFramework)' == 'net7.0' " />
+        <PackageReference Include="System.DirectoryServices" Version="9.0.7" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' And '$(TargetFramework)' != 'net6.0' And '$(TargetFramework)' != 'net7.0' " />
       </ItemGroup>
     </Otherwise>
   </Choose>
