--- a/UnitTests/Windows.Shell.Common/Windows.Shell.Common.csproj
+++ b/UnitTests/Windows.Shell.Common/Windows.Shell.Common.csproj
@@ -3,7 +3,7 @@
     <AssemblyName>UnitTest.Windows.Shell</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="8.0.5" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.7" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\PInvoke\ComCtl32\Vanara.PInvoke.ComCtl32.csproj" />
