--- a/Windows.Extensions/Vanara.Windows.Extensions.csproj
+++ b/Windows.Extensions/Vanara.Windows.Extensions.csproj
@@ -23,7 +23,6 @@ Corners
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
   <ItemGroup Condition=" !$(TargetFramework.StartsWith('net4')) ">
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) " />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.5" Condition=" !$(TargetFramework.StartsWith('netcore')) And !$(TargetFramework.StartsWith('net5')) " />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.7" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) " />
   </ItemGroup>
 </Project>
