--- a/PInvoke/IMAPI/Vanara.PInvoke.IMAPI.csproj
+++ b/PInvoke/IMAPI/Vanara.PInvoke.IMAPI.csproj
@@ -20,7 +20,7 @@ DDiscFormat2DataEvents DDiscFormat2EraseEvents DDiscFormat2RawCDEvents DDiscForm
   <ItemGroup>
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
+  <ItemGroup Condition=" $(NETFRAMEWORK) ">
     <Reference Include="CustomMarshalers" />
   </ItemGroup>
 </Project>
