--- a/WPF.Extensions/Vanara.WPF.Extensions.csproj
+++ b/WPF.Extensions/Vanara.WPF.Extensions.csproj
@@ -22,7 +22,7 @@ GdiObjExtensions2, SystemWindowsExtensions
     <ProjectReference Include="..\PInvoke\Gdi32\Vanara.PInvoke.Gdi32.csproj" />
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
+  <ItemGroup Condition=" $(NET40_OR_GREATER) ">
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
   </ItemGroup>
