--- a/CodeGen/Generator/Vanara.CodeGen.csproj
+++ b/CodeGen/Generator/Vanara.CodeGen.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    
   <ProjectExtensions>
     <IncludeAssembly />
   </ProjectExtensions>
-
   <PropertyGroup>
     <TargetFrameworks />
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -14,39 +12,28 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <IsRoslynComponent>true</IsRoslynComponent>
-    <!--<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>-->
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="HandleTemplate.cs" />
     <Compile Remove="SafeHandleTemplate.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="HandleTemplate.cs" />
     <EmbeddedResource Include="SafeHandleTemplate.cs" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" >
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" >
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="LumenWorksCsvReader" PrivateAssets="all" GeneratePathProperty="true" />
   </ItemGroup>
-
-  <ItemGroup>
-    <!--<ProjectReference Include="..\..\Core\Vanara.Core.csproj" OutputItemType="Analyzer" />-->
-  </ItemGroup>
-
   <PropertyGroup>
     <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
   </PropertyGroup>
-
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
       <TargetPathWithTargetPlatformMoniker Include="$(PkgLumenWorksCsvReader)\lib\netstandard2.0\LumenWorks.Framework.IO.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
-
 </Project>
