--- a/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
+++ b/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
@@ -26,9 +26,7 @@ ID3DBlob ID3DDestructionNotifier IDXGIAdapter IDXGIAdapter1 IDXGIAdapter2 IDXGIA
   <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" Condition=" '$(TargetFramework)' == 'net5.0' " />
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" />
   </ItemGroup>
 </Project>
