--- a/PInvoke/DirectXMath/Vanara.PInvoke.DirectXMath.csproj
+++ b/PInvoke/DirectXMath/Vanara.PInvoke.DirectXMath.csproj
@@ -23,9 +23,7 @@ Structures
   <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" Condition=" '$(TargetFramework)' == 'net5.0' " />
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" />
   </ItemGroup>
 </Project>
