--- a/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
+++ b/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
@@ -24,7 +24,7 @@ Structures
     <AdditionalFiles Include="handles.csv" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('net4')) Or $(TargetFramework.StartsWith('netstandard2')) " />
+    <PackageReference Include="System.ComponentModel.Annotations" Condition=" $(NET40_OR_GREATER) Or $(NETSTANDARD2_0) Or $(NETSTANDARD2_1) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
