--- a/PInvoke/UIAutomation/Vanara.PInvoke.UIAutomation.csproj
+++ b/PInvoke/UIAutomation/Vanara.PInvoke.UIAutomation.csproj
@@ -20,7 +20,7 @@ IAccessibleEx IAccessibleHostingElementProviders IAnnotationProvider ICustomNavi
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
+  <ItemGroup Condition=" $(NET40_OR_GREATER) ">
     <Reference Include="Accessibility" />
   </ItemGroup>
   <ItemGroup>
