--- a/SourceLink.targets
+++ b/SourceLink.targets
@@ -11,8 +11,8 @@
   <PropertyGroup>
     <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);NETSDK1105;NETSDK1138</MSBuildWarningsAsMessages>
   </PropertyGroup>
-  <ItemGroup Condition="!$(MSBuildProjectDirectory.Contains('UnitTests'))" >
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  <ItemGroup Condition="!$(MSBuildProjectDirectory.Contains('UnitTests'))">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     <SourceRoot Include="$(MSBuildThisFileDirectory)/" />
   </ItemGroup>
 </Project>
