--- a/System/Vanara.SystemServices.csproj
+++ b/System/Vanara.SystemServices.csproj
@@ -18,18 +18,13 @@ BatteryStatus, EdgeTraversalType, EnergySaverStatus, FirewallAction, FirewallAut
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.Management" Condition=" '$(TargetFramework)' == 'net45' " />
-    <Reference Include="System.ServiceProcess" Condition=" $(TargetFramework.StartsWith('net4')) " />
+    <Reference Include="System.ServiceProcess" Condition=" $(NET40_OR_GREATER) " />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
-    <PackageReference Include="System.Drawing.Common" Version="9.0.7" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) " />
-    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) " />
-    <PackageReference Include="System.Management" Version="6.0.2" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
-    <PackageReference Include="System.Management" Version="8.0.0" Condition=" '$(TargetFramework)' == 'net6.0' Or '$(TargetFramework)' == 'net7.0' " />
-    <PackageReference Include="System.Management" Version="9.0.7" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' And '$(TargetFramework)' != 'net6.0' And '$(TargetFramework)' != 'net7.0' " />
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.1" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.1" Condition=" '$(TargetFramework)' == 'net6.0' Or '$(TargetFramework)' == 'net7.0' " />
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="9.0.7" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' And '$(TargetFramework)' != 'net6.0' And '$(TargetFramework)' != 'net7.0' " />
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Condition=" $(DRAWING_COMMON_COND) " />
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Condition=" $(ACCESSCTRL_COND) " />
+    <PackageReference Include="System.Management" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PInvoke\AMSI\Vanara.PInvoke.AMSI.csproj" />
