--- a/UnitTests/PInvoke/Printing/Printing.csproj
+++ b/UnitTests/PInvoke/Printing/Printing.csproj
@@ -3,7 +3,7 @@
     <AssemblyName>UnitTest.PInvoke.Printing</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="9.0.7" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) " />
+    <PackageReference Include="System.Drawing.Common" Condition=" $(DRAWING_COMMON_COND) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
