--- a/UnitTests/PInvoke/Shared/Shared.csproj
+++ b/UnitTests/PInvoke/Shared/Shared.csproj
@@ -3,9 +3,9 @@
     <AssemblyName>UnitTest.PInvoke.Shared</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Update="Microsoft.NET.Test.Sdk" />
   </ItemGroup>
 </Project>
