--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -22,13 +22,13 @@ NavigationLogDirection, SFVMUD, ShellBrowserViewMode, TaskbarItemTabThumbnailOpt
     <RootNamespace>Vanara.Windows.Shell</RootNamespace>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
+  <ItemGroup Condition=" $(NET40_OR_GREATER) ">
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="9.0.7" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net8')) Or $(TargetFramework.StartsWith('net9')) " />
+    <PackageReference Include="System.Drawing.Common" Condition=" $(DRAWING_COMMON_COND) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Windows.Shell.Common\Vanara.Windows.Shell.Common.csproj" />
