Updated project files

--- a/PInvoke/Hid/Vanara.PInvoke.Hid.csproj
+++ b/PInvoke/Hid/Vanara.PInvoke.Hid.csproj
@@ -9,7 +9,16 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;hid;human interface devices</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+HidD_FlushQueue HidD_FreePreparsedData HidD_GetAttributes HidD_GetFeature HidD_GetHidGuid HidD_GetIndexedString HidD_GetInputReport HidD_GetManufacturerString HidD_GetNumInputBuffers HidD_GetPhysicalDescriptor HidD_GetPreparsedData HidD_GetProductString HidD_GetSerialNumberString HidD_Hello HidD_SetFeature HidD_SetNumInputBuffers HidD_SetOutputReport HidNotifyPresence HidP_FreeCollectionDescription HidP_GetButtonArray HidP_GetButtonCaps HidP_GetCaps HidP_GetCollectionDescription HidP_GetData HidP_GetExtendedAttributes HidP_GetLinkCollectionNodes HidP_GetScaledUsageValue HidP_GetSpecificButtonCaps HidP_GetSpecificValueCaps HidP_GetUsages HidP_GetUsagesEx HidP_GetUsageValue HidP_GetUsageValueArray HidP_GetValueCaps HidP_GetVersion HidP_GetVersionInternal HidP_InitializeReportForID HidP_MaxDataListLength HidP_MaxUsageListLength HidP_SetButtonArray HidP_SetData HidP_SetScaledUsageValue HidP_SetUsages HidP_SetUsageValue HidP_SetUsageValueArray HidP_TranslateUsagesToI8042ScanCodes HidP_UnsetUsages HidP_UsageAndPageListDifference HidP_UsageListDifference HidRegisterMinidriver HidSpiCxDeviceConfigure HidSpiCxDeviceInitConfig HidSpiCxNotifyDeviceReset HIDSPICX_DEVICE_CONFIG_INIT VhfAsyncOperationComplete VhfCreate VhfDelete VhfReadReportSubmit VhfStart VHF_CONFIG_INIT
+
+Structures
+&lt;Reserved2&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;_args&gt;e__FixedBuffer CONNECT_DATA HIDD_ATTRIBUTES HIDP_BUTTON_ARRAY_DATA HIDP_BUTTON_CAPS HIDP_CAPS HIDP_COLLECTION_DESC HIDP_DATA HIDP_DEVICE_DESC HIDP_EXTENDED_ATTRIBUTES HIDP_GETCOLDESC_DBG HIDP_KEYBOARD_MODIFIER_STATE HIDP_LINK_COLLECTION_NODE HIDP_REPORT_IDS HIDP_UNKNOWN_TOKEN HIDP_VALUE_CAPS HIDSPICX_DEVICE_CONFIG HIDSPICX_DRIVER_GLOBALS HIDSPICX_REPORT HID_COLLECTION_INFORMATION HID_DESCRIPTOR HID_DESCRIPTOR_DESC_LIST HID_DEVICE_ATTRIBUTES HID_DEVICE_EXTENSION HID_MINIDRIVER_REGISTRATION HID_SUBMIT_IDLE_NOTIFICATION_CALLBACK_INFO HID_XFER_PACKET INDICATOR_LIST INTERNAL_I8042_HOOK_KEYBOARD INTERNAL_I8042_HOOK_MOUSE INTERNAL_I8042_START_INFORMATION KEYBOARD_ATTRIBUTES KEYBOARD_EXTENDED_ATTRIBUTES KEYBOARD_ID KEYBOARD_INDICATOR_PARAMETERS KEYBOARD_INDICATOR_TRANSLATION KEYBOARD_INPUT_DATA KEYBOARD_TYPEMATIC_PARAMETERS KEYBOARD_UNIT_ID_PARAMETER MOUSE_ATTRIBUTES MOUSE_INPUT_DATA MOUSE_UNIT_ID_PARAMETER NotRangeUnion NotRangeUnion OUTPUT_PACKET PDEVICE_OBJECT PDRIVER_OBJECT PFILE_OBJECT PHIDP_PREPARSED_DATA PHIDP_REPORT_DESCRIPTOR RangeUnion RangeUnion USAGE_AND_PAGE VHFHANDLE VHFOPERATIONHANDLE VHF_CONFIG
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\WindowsDriverFramework\Vanara.PInvoke.WindowsDriverFramework.csproj" />
