--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -64,6 +64,7 @@
       <dependency id="Vanara.PInvoke.FunDisc" version="4.2.1" />
       <dependency id="Vanara.PInvoke.FwpUClnt" version="4.2.1" />
       <dependency id="Vanara.PInvoke.Gdi32" version="4.2.1" />
+      <dependency id="Vanara.PInvoke.Hid" version="4.2.1" />
       <dependency id="Vanara.PInvoke.HttpApi" version="4.2.1" />
       <dependency id="Vanara.PInvoke.IMAPI" version="4.2.1" />
       <dependency id="Vanara.PInvoke.Imm32" version="4.2.1" />
@@ -127,6 +128,7 @@
       <dependency id="Vanara.PInvoke.WebSocket" version="4.2.1" />
       <dependency id="Vanara.PInvoke.Wer" version="4.2.1" />
       <dependency id="Vanara.PInvoke.WinBio" version="4.2.1" />
+      <dependency id="Vanara.PInvoke.WindowsDriverFramework" version="4.2.1" />
       <dependency id="Vanara.PInvoke.WinHTTP" version="4.2.1" />
       <dependency id="Vanara.PInvoke.WinINet" version="4.2.1" />
       <dependency id="Vanara.PInvoke.WinSCard" version="4.2.1" />
