Lots of updates based on new generated code. Mostly cosmetic, removing duplicate functions that are now generated, adjusting attributes to get the correct generation, and fixing a few bugs along the way.

--- a/UnitTests/PInvoke/Shared/Shared.csproj
+++ b/UnitTests/PInvoke/Shared/Shared.csproj
@@ -3,6 +3,12 @@
     <AssemblyName>UnitTest.PInvoke.Shared</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="SampleAttributeTestCode.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SampleAttributeTestCode.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
