--- a/CodeGen/Generator/Vanara.CodeGen.csproj
+++ b/CodeGen/Generator/Vanara.CodeGen.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Compile Remove="AddAsMemberGenerator.cs" />
     <Compile Remove="HandleTemplate.cs" />
+    <Compile Remove="IUnkMethodGenerator.cs" />
     <Compile Remove="SafeHandleTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -24,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AddAsMemberGenerator.cs" />
+    <None Include="IUnkMethodGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
